--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,2 @@
-<button mat-button (click)="openDialog()">Open dialog</button>
+<!-- <button mat-button (click)="openDialog()">Open dialog</button> -->
+<app-header></app-header>
