restruturação de pastas

--- a/src/app/@shared/components/header/header.component.html
+++ b/src/app/@shared/components/header/header.component.html
@@ -6,7 +6,7 @@
         <li class="item-list">Planos</li>
       </ul>
   </div>
-  
+
   <div>
     <form>
       <div class="form">
@@ -14,8 +14,8 @@
           <label for="" class="form-check-label">
             <b>Acesse</b> sua conta
           </label>
-          <input type="text" class="form-control" id="inlineFormInputNmae" 
-          placceholder="Digite seu CPF">
+          <input type="text" class="form-control" id="inlineFormInputNmae"
+          placeholder="Digite seu CPF">
         </div>
         <div>
           <button type="submit" class="btn btn-primary acessar-conta">Acessar</button>
