typed.js + footer

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,7 +2,10 @@
 
 <div class="wrapper-content">
   <div class="box-tile">
-    <h1><b class="tag">#</b>Traning banking juros amigo</h1>
+    <b class="tag">#</b>
+    <h1 id="typing-element"></h1>
   </div>
   <div class="bg_img"></div>
 </div>
+
+<app-footer></app-footer>
