--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -7,6 +7,7 @@
   top: -60px;
 }
 .box-tile {
+  display: flex;
   width: 40vw;
   height: 100px;
   position: absolute;
@@ -21,9 +22,10 @@
   font-family: "Crete Round", serif !important;
 }
 .tag {
-  font-size: 2-pt;
+  font-size: 4rem;
   color: chocolate;
   font-weight: bold;
+  margin-right: 10px;
 }
 .bg_img {
   right: 0;
