Aula do dia 30/03

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,3 @@
 <!-- <button mat-button (click)="openDialog()">Open dialog</button> -->
-<app-home></app-home>
+<!-- <app-home></app-home> -->
+<router-outlet></router-outlet>
