--- a/src/app/@shared/components/header/header.component.html
+++ b/src/app/@shared/components/header/header.component.html
@@ -18,7 +18,7 @@
           placeholder="Digite seu CPF">
         </div>
         <div>
-          <button type="submit" class="btn btn-primary acessar-conta">Acessar</button>
+          <button type="submit" class="btn btn-dark acessar-conta">Acessar</button>
         </div>
       </div>
     </form>
